yaml/monitoring/7.ingress/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: grafana.shpaq.org
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
        path: /
  tls:
  - hosts:
    - grafana.shpaq.org
    secretName: grafana-shpaq-org-tls
